--- a/call.yml
+++ b/call.yml
@@ -34,10 +34,10 @@
           - destination-pattern 31..
           - session target ipv4:10.31.100.8
           - codec g711ULAW
-          - dial-peer voice 32 Voip
-          - destination-pattern 32..
-          - session target ipv4:10.32.100.8
-          - codec g711ULAW
+         # -  dial-peer voice 32 Voip
+         # - destination-pattern 32..
+         # - session target ipv4:10.32.100.8
+         # - codec g711ULAW
           - dial-peer voice 41 Voip
           - destination-pattern 41..
           - session target ipv4:10.41.100.8
