--- a/iphone.yml
+++ b/iphone.yml
@@ -10,16 +10,16 @@
         commands:
           - configure terminal
           - dial-peer voice 1 pots
-          - destination-pattern _00
+          - destination-pattern 3200
           - port 0/0/0
           - dial-peer voice 2 pots
-          - destination-pattern _01
+          - destination-pattern 3201
           - port 0/0/1
           - dial-peer voice 3 pots
-          - destination-pattern _02
+          - destination-pattern 3202
           - port 0/0/2
           - dial-peer voice 4 pots
-          - destination-pattern _03
+          - destination-pattern 3203
           - port 0/0/3
           - end
       vars:
@@ -35,31 +35,31 @@
           - no auto-reg-ephone
           - max-ephones 5
           - max-dn 20
-          - ip source-address 10._.100.8 port 2000
+          - ip source-address 10.32.100.8 port 2000
           - create cnf-files
           - ephone-dn 1
-          - number _11
+          - number 3211
           - ephone-dn 2
-          - number _22
+          - number 3222
           - ephone-dn 3
-          - number _33
+          - number 3233
           - ephone-dn 4
-          - number _44
+          - number 3244
           - ephone-dn 5
-          - number _55
+          - number 3255
           - ephone-dn 6
-          - number _66
+          - number 3266
           - ephone-dn 7
-          - number _77
+          - number 3277
           - ephone-dn 8
-          - number _88
+          - number 3288
           - ephone 1
-          - Mac-address ___.____.___
+          - Mac-address CCD8.C1FB.1045
           - type 8945
           - button 1:1 2:3 3:2 4:4
           - restart
           - ephone 2
-          - Mac-address ____.____.____
+          - Mac-address DCA5.F43F.3B7f
           - type 8945
           - button 1:5 2:6 3:7 4:8
           - restart
@@ -93,8 +93,8 @@
         commands:
           - configure terminal
           - router ospf 1
-          - router-id 10._.100.8
-          - network 10._.100.0 0.0.0.255 area 0
+          - router-id 10.32.100.8
+          - network 10.32.100.0 0.0.0.255 area 0
           - end
       vars:
         ansible_network_os: ios
